...
        );

    }, [currentTime, today]);

    // Header Component (Location & Date)
    const HomeHeader = () => (
        <View style={styles.headerContainer} testID="home-header">
            <View>
                <Text style={styles.locationText}>{location.longitude + ', ' + location.latitude}</Text>
                <Text style={styles.dateText}>{currentTime.toLocaleDateString('en-US', { weekday: 'long', month: 'short', day: 'numeric', year: 'numeric' })}</Text>
            </View>
            <View style={{ alignItems: 'flex-end' }}>
                <Text style={styles.dateText}>3 Jumada Al-Thani 1447</Text>
...
        </View>
    );

    return (
        <ScreenWrapper scroll={true} header={<HomeHeader />}>
            {/* Next Prayer Countdown */}
            <View style={styles.countdownContainer} testID="countdown-container">
                {nextPrayer ? (
                    <PrayerCountDown
                        nextPrayerName={nextPrayer.english}
                        timeRemaining={timeRemaining}
                    />
                ) : (
...
